--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,46 +1,21 @@
-name: Deploy to Github Pages
-
+name: Build and Deploy to Github pages
 on:
   push:
     branches:
       - main
-
-  workflow_dispatch:
-
 jobs:
-  deployment:
+  deploy:
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [14.x]
-
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout 🛎️
+        uses: actions/checkout@v2.3.1
 
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
-        with:
-          node-version: ${{ matrix.node-version }}
-
-      - name: Use NPM 7
-        run: npm i -g npm@latest
-
-      - name: Cache dependencies
-        uses: actions/cache@v2
-        with:
-          path: ~/.npm
-          key: ${{ runner.OS }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.OS }}-node-
-            ${{ runner.OS }}-
-
-      - name: Deploy
-        run: |
-          npm ci --legacy-peer-deps
-          npm run deploy
-          npm run export
-          npm
+      - name: Install 🔧 
+        run: npm install
+      - name: Tests 🐛
+        run: npm test
+      - name: Build
+        run: npm run prod
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@4.1.4
