--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,9 @@ jobs:
       - name: Tests 🐛
         run: npm test
       - name: Build
-        run: npm run prod
+        run: | 
+          npm run prod
+          touch out/.nojekyll
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@4.1.4
