--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10.3.3",
+    "embla-carousel": "^4.5.3",
     "next": "11.1.0",
     "postcss": "^8.3.6",
     "react": "17.0.2",
